# container-yard

./: README.md  compose.yml  justfile
backend/: Cargo.toml  Dockerfile  justfile
backend/src/: lib.rs  main.rs
backend/src/routes/: auth.rs  mod.rs  projects.rs
backend/src/services/: mod.rs  project.rs
backend/src/services/container/: mod.rs  service.rs
backend/src/services/project/: mod.rs  service.rs
backend/tests/: api.rs  auth_api.rs  common.rs  project_service.rs  projects_api.rs
backend/tests/common/: mod.rs  project_service.rs  server.rs
backend/tests/projects/test/: compose.yml
backend/tests/projects/test2/: compose.yml
docs/: deployment.md
frontend/: .dockerignore  Dockerfile  bun.lockb  justfile  nuxt.config.ts  package.json
frontend/app/assets/css/: main.css
frontend/app/components/: async-button.vue  file-entry.vue
frontend/app/components/file/: file-create.vue  file-delete.vue  file-edit.vue  file-entry.vue
frontend/app/components/sidebar/: project-create.vue  project-delete.vue
frontend/app/composables/: useLoginToken.ts
frontend/app/layouts/: sidebar.vue
frontend/app/middleware/: auth.ts
frontend/app/pages/: [[project]].vue  index.vue  login.vue
frontend/app/plugins/: api.ts
frontend/app/stores/: useProjectStore.ts
frontend/app/utils/: types.ts
frontend/pages/: index.vue
