[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.2", features = ["tower", "trace"] }
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
serde = { version = "1.0.217", features = ["derive"] }
tower = { version = "0.5.2", features = ["util"] }
http-body-util = "0.1.2"
serde_json = "1.0.134"
