[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.45.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.4", features = ["tower", "trace"] }
tower = { version = "0.5.2", features = ["util"] }
http-body-util = "0.1.3"
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
